--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 #soldier {
-    background: url("veterans105.jpg") no-repeat center center fixed;
+    background: url("templates/Vet.jpg") no-repeat center center fixed;
     min-height: 100%;
     /*min-width: 1024px;*/
     background-size: cover;
